added- Controllers Views

--- a/CodingWiki_Console/CodingWiki_Console.csproj
+++ b/CodingWiki_Console/CodingWiki_Console.csproj
@@ -13,4 +13,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CodingWiki_DataAccess\CodingWiki_DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
